RESOLVED FIXED115378
[BlackBerry] Cannot touch scroll readonly text input
https://bugs.webkit.org/show_bug.cgi?id=115378
Summary [BlackBerry] Cannot touch scroll readonly text input
gmak
Reported 2013-04-29 14:55:57 PDT
node->rendererIsEditable() returns false if the input element has the readonly tag set, causing issues with scrolling them.
Attachments
Patch with changelog (4.51 KB, patch)
2013-04-29 15:06 PDT, gmak
no flags
Patch with changelog (2.55 KB, patch)
2013-05-02 11:03 PDT, gmak
no flags
gmak
Comment 1 2013-04-29 15:06:18 PDT
Created attachment 200051 [details] Patch with changelog
Rob Buis
Comment 2 2013-04-30 16:12:27 PDT
Comment on attachment 200051 [details] Patch with changelog Ok.
WebKit Commit Bot
Comment 3 2013-04-30 16:39:27 PDT
Comment on attachment 200051 [details] Patch with changelog Clearing flags on attachment: 200051 Committed r149412: <http://trac.webkit.org/changeset/149412>
WebKit Commit Bot
Comment 4 2013-04-30 16:39:28 PDT
All reviewed patches have been landed. Closing bug.
gmak
Comment 5 2013-05-02 11:01:43 PDT
reopen
gmak
Comment 6 2013-05-02 11:03:46 PDT
Created attachment 200322 [details] Patch with changelog Forgot half the patch
gmak
Comment 7 2013-05-02 11:04:25 PDT
can't figure out how to change teh status
Rob Buis
Comment 8 2013-05-02 11:06:04 PDT
Comment on attachment 200322 [details] Patch with changelog LGTM.
WebKit Commit Bot
Comment 9 2013-05-02 11:32:44 PDT
Comment on attachment 200322 [details] Patch with changelog Clearing flags on attachment: 200322 Committed r149490: <http://trac.webkit.org/changeset/149490>
WebKit Commit Bot
Comment 10 2013-05-02 11:32:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.