[BlackBerry] Cannot touch scroll readonly text input. https://bugs.webkit.org/show_bug.cgi?id=115378

Patch by Genevieve Mak <gmak@rim.com> on 2013-04-30
Reviewed by Rob Buis.

PR #332902
Reviewed Internally by Mike Fenton.
Node::rendererIsEditable() returns false if the input element has the readonly tag set.
Check the node type instead.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::isShadowHostTextInputElement):
(DOMSupport):
* WebKitSupport/DOMSupport.h:
* WebKitSupport/InRegionScrollableArea.cpp:
(BlackBerry::WebKit::InRegionScrollableArea::InRegionScrollableArea):

Canonical link: https://commits.webkit.org/133894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149412 268f45cc-cd09-0410-ab3c-d52691b4dbfc